# ---

./: .gitignore  AddFriendPageController.cpp  AddFriendPageController.h  CMakeLists.txt  Client.cpp  Client.h  CommunicationPageController.cpp  CommunicationPageController.h  MessagePreviewPageController.cpp  addfriendpagecontroller.cpp  addfriendpagecontroller.h  assets.qrc  client.cpp  client.h  communicationpagecontroller.cpp  communicationpagecontroller.h  fileopendialog.cpp  fileopendialog.h  filetools.cpp  filetools.h  getfirstletter.cpp  getfirstletter.h  listenthread.cpp  listenthread.h  main.cpp  messagepreviewpagecontroller.cpp  messagepreviewpagecontroller.h  myimageprovider.cpp  myimageprovider.h  network.cpp  network.h  networkchecker.h  othersource.qrc  personalpagecontroller.cpp  personalpagecontroller.h  qml.qrc
android/: AndroidManifest.xml
ffmpeg-source/lib/ffmpeg4.4/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
qml/: AddfriendPage.qml  Avatar.qml  CommunicationPage.qml  ContactListPage.qml  InitPage.qml  Main.qml  MessagePreviewPage.qml  Messagepreviewpage.qml  PersonalInformation.qml  PersonalPage.qml  Personalpage.qml  ShowFriend.qml  ShowFriendPage.qml  ShowStrangerPage.qml  showFriendPage.qml
